fixed broken style

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -10,7 +10,7 @@
 .edit-schedule-button {
     position: absolute;
     bottom: -1px;
-    right: 370px;
+    right: 280px;
     background-color: #3644ff;
     width: 400px;
     margin-bottom: 40px;
