--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -18,9 +18,10 @@
 
 .schedule-grid-show {
     width: 400px;
+    height: 750px;
     position: relative;
-    top: -340px;
-    right: -50px;
+    top: 10px;
+    right: -35px;
 
 }
 
@@ -89,46 +90,46 @@
 
 .monday {
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 28px;
 
 }
 
 .tuesday {
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 76px;
 }
 
 .wednesday {
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 118px;
 }
 
 .thursday {
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 161px;
 }
 
 .friday {
     position: absolute;
-    top: -20px;
+    top: -25px;
     left: 211px;
 }
 
 .saturday {
     position: absolute;
-    top: -20px;
-    left: 250px;
+    top: -25px;
+    left: 247px;
 
 }
 
 .sunday {
     position: absolute;
-    top: -20px;
-    left: 292px;
+    top: -25px;
+    left: 290px;
 }
 
 .monday-squares {
